--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="com.github.dawidhyzy.kotlinvsjava"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -9,16 +11,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".jv.ui.ListJavaActivity"
-                  android:label="@string/app_name"
-                  android:theme="@style/SplashTheme">
+        <activity
+            android:name=".jv.ui.activity.ForecastJavaActivity"
+            android:label="@string/app_name"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".kt.ListKotlinActivity"/>
+        <activity android:name=".kt.ForecastKotlinActivity"/>
     </application>
 
 </manifest>
