--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext.support_version = '23.1.1'
-    ext.kotlin_version = '1.0.0-beta-4589'
-    ext.anko_version = '0.8.1'
+    ext.kotlin_version = '1.0.0-rc-1036'
+    ext.anko_version = '0.8.2'
     repositories {
         jcenter()
     }
@@ -11,7 +11,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha9'
+        classpath 'com.android.tools.build:gradle:2.0.0-beta2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
