--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ android {
 
 ext {
     okhttpVersion = '3.0.1'
-    retrofitVersion = '2.0.0-beta3'
+    retrofitVersion = '2.0.0-beta4'
+    rxJavaVersion = '1.1.0'
 }
 
 dependencies {
@@ -47,14 +48,14 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'io.reactivex:rxjava:1.1.0'
+    compile "io.reactivex:rxandroid:$rxJavaVersion"
+    compile "io.reactivex:rxjava:$rxJavaVersion"
     compile 'io.reactivex:rxkotlin:0.40.1'
 
     testCompile 'junit:junit:4.12'
 }
 buildscript {
-    ext.kotlin_version = '1.0.0-rc-1036'
+    ext.kotlin_version = '1.0.0'
     repositories {
         mavenCentral()
     }
